--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -1,5 +1,5 @@
-$slider-thumb-box-shadow: fluent-shadow(8);
-$slider-thumb-border: 5px solid $rc-container-bg;
+$slider-thumb-box-shadow: rc-shadow(2);
+$slider-thumb-border: 5px solid #fff;
 $slider-thumb-border-radius: $rc-bradius-circle;
 $slider-thumb-border-width-hover: 3px;
 $slider-thumb-border-width-active: 5.5px;
