--- a/styles/utils/_function.scss
+++ b/styles/utils/_function.scss
@@ -5,6 +5,11 @@
   $y2: 0.075px;
   $blur2: 0.225px;
   $shadow: 0 $y1 * $dp $blur1 * $dp 0 rgb(0 0 0 / 13%),
-    0 $y2 * $dp $blur2 * $dp 0 rgb(0 0 0 / 11%);
+  0 $y2 * $dp $blur2 * $dp 0 rgb(0 0 0 / 11%);
   @return $shadow;
+}
+
+@function rc-shadow($dp) {
+  @return 0 0 0 1px rgb(0 0 0 / 13%),
+  fluent-shadow($dp);
 }
