--- a/styles/pages/dialog/_readme.scss
+++ b/styles/pages/dialog/_readme.scss
@@ -4,7 +4,7 @@ $dialog-readme-side-border-radius: $rc-bradius-medium;
 $dialog-readme-return-color: $rc-text-secondary;
 $dialog-readme-return-bg-hover: $rc-component-bg;
 $dialog-readme-nav-border-radius: $rc-bradius-max;
-$dialog-readme-nav-shadow: fluent-shadow(2);
+$dialog-readme-nav-shadow: rc-shadow(1);
 $dialog-readme-nav-border: $rc-border-3;
 $dialog-readme-main-border-radius: $rc-bradius-medium;
 $dialog-readme-main-bg: $rc-container-bg;
