--- a/styles/pages/dialog/_bazaar.scss
+++ b/styles/pages/dialog/_bazaar.scss
@@ -1,6 +1,6 @@
 $dialog-card-border-radius: $rc-bradius-large;
-$dialog-card-shadow: fluent-shadow(4);
-$dialog-card-shadow-hover: fluent-shadow(8);
+$dialog-card-shadow: rc-shadow(4);
+$dialog-card-shadow-hover: rc-shadow(8);
 $dialog-card-transition: all 300ms cubic-bezier(0.2, 0.91, 0.85, 0.96) 0s;
 $dialog-card-bg-hover: $rc-component-bg;
 $dialog-card-img-border-radius: $rc-bradius-small;
