feat: 更新全屏后的顶栏样式

--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -14,3 +14,7 @@ $content-margin: "max(calc((100% - #{$editor-width}) / 2), 64px)";
 
 //加载笔记页面
 @import "loading";
+
+//全屏界面
+@import "fullscreen";
+
