--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -9,6 +9,7 @@ $button-outline-bg-hover: $rc-brand-light-hover;
   box-shadow: unset;
   height: 30px;
   font-size: 13px;
+  line-height: 22px;
 
   &:hover {
     background-color: $button-bg-hover;
@@ -18,6 +19,11 @@ $button-outline-bg-hover: $rc-brand-light-hover;
   &:focus {
     box-shadow: unset;
 
+  }
+  
+  svg {
+    width: 10px;
+    height: 22px;
   }
 
   &--small,
@@ -40,19 +46,10 @@ $button-outline-bg-hover: $rc-brand-light-hover;
     }
   }
 
-
   &--small {
     padding: 4px 8px;
     height: 24px;
     font-size: 12px;
     border-radius: $rc-bradius-extra-small;
-  }
-
-  &--outline {
-
-    svg {
-      width: 10px;
-      height: 10px;
-    }
-  }
+  }  
 }
