fix: 修复底栏的边栏设置按钮菜单的显示问题

--- a/styles/layout/_status.scss
+++ b/styles/layout/_status.scss
@@ -25,12 +25,12 @@
         transform: translateX(calc(100vw - 30px * 5 - 2px));
 
         .b3-menu {
-            bottom: 30px !important;
+            bottom: 20px !important;
             left: unset !important;
-            right: 0;
+            right: 0px;
 
             &.fn__none {
-                display: none !important;
+                display: block !important;
             }
         }
 
