--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -85,6 +85,7 @@ $rc-bradius-max: 9999px;
 $rc-bradius-circle: 50%;
 
 // 动画
+$rc-easing: $anim-time-fn-easing;
 $rc-ease-out: $anim-time-fn-ease-out;
 $rc-ease-in: $anim-time-fn-ease-in;
 $rc-duration-base: $anim-duration-base; //0.2s
@@ -113,4 +114,8 @@ $rc-duration-slow: $anim-duration-slow; //0.28s
 
   // 线条
   --b3-border-color: #{$rc-border-3};
+
+  /* 动画效果 */
+  --b3-transition:all #{$rc-duration-base} #{$rc-easing};
+  --b3-width-transition: width #{$rc-duration-base} #{$rc-easing};
 }
