--- a/styles/layout/_wnd.scss
+++ b/styles/layout/_wnd.scss
@@ -2,14 +2,14 @@ $wnd-scale: scale(0.9);
 $wnd-border: none;
 $wnd-bradius: $rc-bradius-medium;
 $wnd-bg: $rc-container-bg;
-$wnd-shadow: none;//rc-shadow(1);
+$wnd-shadow: none; //rc-shadow(1);
 //边窗动画
 $wnd-width-time: 0.2s;
 $wnd-transition: all $wnd-width-time ease-out 0s;
 
 :root {
   // 动画效果
-  --b3-width-transition: width #{$wnd-width-time} ease-out 0s; //rc-width-transition
+  --b3-width-transition: width #{$rc-duration-base} #{$rc-easing};
 }
 
 @keyframes wnd-close {
@@ -32,23 +32,6 @@ $wnd-transition: all $wnd-width-time ease-out 0s;
   }
 }
 
-// @keyframes wnd-close-right {
-//   from {
-//     opacity: 1;
-//     transform: scale(1);//translateX(0);
-//     max-height: 100%;
-//   }
-//   50% {
-//     opacity: 0;
-//     transform: $wnd-scale;//translateX(50%);
-//     max-height: 100%;
-//   }
-//   to {
-//     opacity: 0;
-//     transform: $wnd-scale;//translateX(50%);
-//     max-height: 0;
-//   }
-// }
 
 %wnd {
   min-height: 10% !important;
@@ -64,45 +47,40 @@ $wnd-transition: all $wnd-width-time ease-out 0s;
 #layouts>.fn__flex {
   overflow: hidden;
 
-  //两侧边窗共有属性
+  //两侧边窗
   >.fn__flex-column {
     transition: var(--b3-width-transition) !important;
 
+    // 显示的边窗
     >.fn__flex {
       overflow-x: hidden;
 
       >div[data-type="wnd"] {
         @extend %wnd;
 
-        // opacity: 1;
-        // transform: scale(1);//translateX(0);
         .layout-tab-container {
           overflow-y: hidden;
 
-          //.file-tree
-          &>.fn__flex-1 {
+          // 边窗容器
+          >.fn__flex-1 {
             overflow: hidden;
             min-width: 0;
 
-            //.navigation
+            //.navigation && ...
             >.fn__flex-1 {
               min-height: 0 !important;
-              // min-width: 400px;
-              // overflow: scroll;
             }
 
+            // 列表
             .b3-list {
               min-width: 200px;
-
-              //   color: $rc-text-primary;
-              //   // box-shadow: #{fluent-shadow(4)};
-              //   // font-weight: 600;
             }
           }
         }
       }
     }
 
+    // 隐藏的边窗
     >.fn__none:not(.layout__resize) {
       display: flex !important;
       animation: wnd-close $wnd-width-time * 2 forwards ease-in-out;
@@ -126,51 +104,60 @@ $wnd-transition: all $wnd-width-time ease-out 0s;
     }
   }
 
-  .layout__center {
+}
 
-    // transition: width 0.01ms linear !important;
-    div[data-type="wnd"] {
-      position: relative;
-      @extend %wnd;
+// 居中窗口
+.layout__center {
 
-      #searchHistoryBtn {
-        // @include graphic(30px, 20px);
-        width: 36px;
-        height: 30px;
-        padding: 5px 8px;
-        svg {
-          &:first-child {
-            width: 12px;
-            height: 12px;
-          }
-          &:last-child {
-            width: 8px;
-          }
+  div[data-type="wnd"] {
+    position: relative;
+    @extend %wnd;
+
+    // 标签搜索页面
+    // 搜索历史按钮
+    #searchHistoryBtn {
+      width: 36px;
+      height: 30px;
+      padding: 5px 8px;
+      border-radius: $rc-bradius-small;
+
+      svg {
+        &:first-child {
+          width: 12px;
+          height: 12px;
         }
-      }
 
-      #globalSearchReload {
-        @include graphic(30px, 12px);
-      }
-
-      .b3-list-item[data-type="search-item"] {
-        padding-bottom: 22px + 5px !important;
-        height: 22px * 2 + 5px * 3;
-
-        .b3-list-item__meta {
-          top: 22px + 5px * 2;
-          right: 8px;
-          max-width: 100%;
-          position: absolute;
-          white-space: nowrap;
-          overflow: hidden !important;
-          text-overflow: ellipsis;
+        &:last-child {
+          width: 8px;
         }
       }
     }
 
-    .b3-form__space--small {
-      margin: 8px;
+    // 刷新按钮
+    #globalSearchReload {
+      border-radius: $rc-bradius-small;
+      @include graphic(30px, 12px);
+    }
+
+    // 搜索结果列表
+    #globalSearchList{
+      margin-top: 4px;
+    }
+
+    // 搜索结果列表项
+    .b3-list-item[data-type="search-item"] {
+      padding-bottom: 22px + 5px !important;
+      height: 22px * 2 + 5px * 3;
+
+      .b3-list-item__meta {
+        top: 22px + 5px * 2;
+        right: 8px;
+        max-width: 100%;
+        position: absolute;
+        white-space: nowrap;
+        overflow: hidden !important;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
