fix(pages): :bug: 修复小弹窗按钮文本颜色样式

--- a/styles/pages/dialog/_small.scss
+++ b/styles/pages/dialog/_small.scss
@@ -13,7 +13,7 @@ $dialog-divide-border: $rc-border-3;
 
 $dialog-text-field-font-size: 13px;
 
-$dialog-button-text-color: #fff;
+$dialog-button-text-color: $rc-text-anti;
 $dialog-button-text-bg: $rc-brand;
 $dialog-button-text-bg-hover: $rc-brand-hover;
 $dialog-button-text-bg-active: $rc-brand-active;
