--- a/styles/components/_snackbar.scss
+++ b/styles/components/_snackbar.scss
@@ -5,6 +5,8 @@ $snackbar-bg: $rc-container-bg;
 $snackbar-info-color: $rc-brand;
 $snackbar-link-color: $rc-brand;
 $snackbar-danger-color: $rc-error;
+$snackbar-warning-color: $rc-warning;
+$snackbar-success-color: $rc-success;
 
 //通知弹窗
 .b3-snackbars {
@@ -25,7 +27,6 @@ $snackbar-danger-color: $rc-error;
       font-size: 14px;
       max-width: 30vw;
       line-height: 22px;
-      // height: 22px + 13px * 2;
 
       // 提示种类图标
       &::before {
@@ -38,15 +39,14 @@ $snackbar-danger-color: $rc-error;
         width: 18px !important;
         height: 18px;
         margin: 0;
-        // margin-right: 8px;
-        @include add_icon("info", $snackbar-info-color, 18, "round");
+        @include add_icon("info", $snackbar-info-color, 24, "round");
       }
 
       a {
         color: $snackbar-link-color;
       }
 
-      .fn__space{
+      .fn__space {
         width: 4px;
       }
     }
@@ -59,9 +59,26 @@ $snackbar-danger-color: $rc-error;
     // 危险提示
     &--error {
       .b3-snackbar__content {
-
         &::before {
-          @include add_icon("warning", $snackbar-danger-color, 18, "round");
+          @include add_icon("error", $snackbar-danger-color, 24, "round");
+        }
+      }
+    }
+
+    // 警告提示
+    &--warning {
+      .b3-snackbar__content {
+        &::before {
+          @include add_icon("warning", $snackbar-warning-color, 24, "round");
+        }
+      }
+    }
+
+    // 成功提示
+    &--success {
+      .b3-snackbar__content {
+        &::before {
+          @include add_icon("success", $snackbar-success-color, 24, "round");
         }
       }
     }
