--- a/styles/pages/editor/_block-mark.scss
+++ b/styles/pages/editor/_block-mark.scss
@@ -1,10 +1,10 @@
 //强调色
-$mark-bg: transparent; //rgb(212, 240, 255);
-// $mark-bg-img: linear-gradient(transparent, var( --rc-brand-light));
+$mark-bg: transparent;
 
 :root {
   // 编辑器搜索颜色
   --b3-protyle-search-background: #{$mark-bg};
+  --b3-protyle-inline-mark-color: #{$rc-text-primary};
   --b3-protyle-inline-mark-background: #{$mark-bg};
 }
 
